Fixing bug #139676.  There was a bug in the calculation of a planet's phase angle, which resulted in nonsense magnitudes (most obviously in Mars).  For the Sun, the apparent magnitude was never set, so it displayed 0.0 instead of the true value of -26.73.

I will forward-port to trunk as well.

BUG: 139676
CCMAIL: kstars-devel@kde.org


svn path=/branches/KDE/3.5/kdeedu/kstars/; revision=645106